--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -61,6 +61,7 @@ jobs:
     runs-on: ubuntu-24.04
     container:
       image: docker.io/mavsdk/mavsdk-ubuntu-22.04:${{ needs.check-docker-changes.outputs.docker_tag }}
+      options: --privileged --ulimit core=-1 --security-opt seccomp=unconfined
     env:
       NODE_OPTIONS: --max_old_space_size=4096
     steps:
@@ -74,6 +75,12 @@ jobs:
           git config --global --add safe.directory /github/workspace
       - name: git get version tags
         run: git fetch --tags
+      - name: configure core dumps
+        run: |
+          ulimit -c unlimited
+          echo '/tmp/core.%h.%e.%t' | sudo tee /proc/sys/kernel/core_pattern
+          echo 'Core dump pattern set to:' 
+          cat /proc/sys/kernel/core_pattern
       - uses: actions/cache@v4
         id: cache
         with:
@@ -97,6 +104,36 @@ jobs:
         run: ./build/src/unit_tests/unit_tests_runner
       - name: system tests
         run: ./build/src/system_tests/system_tests_runner
+      - name: collect core dumps
+        if: failure()
+        run: |
+          echo "Looking for core dumps..."
+          find /tmp -name "core.*" -type f -ls
+          if ls /tmp/core.* 1> /dev/null 2>&1; then
+            for core in /tmp/core.*; do
+              echo "=== Analyzing core dump: $core ==="
+              file "$core"
+              gdb -batch -ex "bt full" -ex "info registers" -ex "thread apply all bt" \
+                  ./build/src/system_tests/system_tests_runner "$core" || true
+            done
+          else
+            echo "No core dumps found"
+          fi
+      - name: upload core dumps
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: core-dumps-coverage-${{ github.run_id }}
+          path: /tmp/core.*
+          retention-days: 7
+          if-no-files-found: ignore
+      - name: upload test binary for core dump analysis
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-binary-coverage-${{ github.run_id }}
+          path: ./build/src/system_tests/system_tests_runner
+          retention-days: 7
       - name: run lcov
         run: lcov --capture --directory . --no-external --exclude "*/third_party/*"  --output-file lcov.info
       - name: check size of lcov.info
@@ -284,6 +321,16 @@ jobs:
           path: /tmp/core.*
           retention-days: 7
           if-no-files-found: ignore
+      - name: upload test binaries for core dump analysis
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-binaries-${{ matrix.description }}-${{ github.run_id }}
+          path: |
+            ./build/release/src/system_tests/system_tests_runner
+            ./build/release/src/system_tests/standalone_param_test
+            ./build/release/src/system_tests/standalone_ftp_test
+          retention-days: 7
       - name: test (mavsdk_server)
         run: ./build/release/src/mavsdk_server/test/unit_tests_mavsdk_server
 
@@ -457,6 +504,16 @@ jobs:
           path: /tmp/core.*
           retention-days: 7
           if-no-files-found: ignore
+      - name: upload test binaries for core dump analysis
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-binaries-${{ matrix.os_type }}-${{ matrix.os_version }}-${{ github.run_id }}
+          path: |
+            ./build/release/src/system_tests/system_tests_runner
+            ./build/release/src/system_tests/standalone_param_test
+            ./build/release/src/system_tests/standalone_ftp_test
+          retention-days: 7
       - name: install
         run: cmake --build build/release --target install
       - name: Package
