--- a/src/system_tests/CMakeLists.txt
+++ b/src/system_tests/CMakeLists.txt
@@ -25,7 +25,7 @@ add_executable(system_tests_runner
     ftp_remove_dir.cpp
     ftp_compare_files.cpp
     ftp_list_dir.cpp
-    mavlink_direct.cpp
+    #mavlink_direct.cpp
     system_tests_runner.cpp
 )
 
