Revert "core: cleanup http loader"
This reverts commit 8c8edb974db78748e00a0dc55c9481160ee6e3e2.

--- a/src/unit_tests/CMakeLists.txt
+++ b/src/unit_tests/CMakeLists.txt
@@ -4,7 +4,7 @@ add_executable(unit_tests_runner
     ${UNIT_TEST_SOURCES}
 )
 
-target_compile_definitions(unit_tests_runner PRIVATE FAKE_TIME=1 TESTING=1)
+target_compile_definitions(unit_tests_runner PRIVATE FAKE_TIME=1)
 
 set_target_properties(unit_tests_runner
     PROPERTIES COMPILE_FLAGS ${warnings}
@@ -27,5 +27,9 @@ target_include_directories(unit_tests_runner
     PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/../mavsdk/core
 )
 
+target_compile_definitions(unit_tests_runner
+    PRIVATE
+    BUILD_WITHOUT_CURL=1
+)
 
 add_test(unit_tests unit_tests_runner)
