New intercept API

--- a/src/system_tests/CMakeLists.txt
+++ b/src/system_tests/CMakeLists.txt
@@ -25,6 +25,7 @@ add_executable(system_tests_runner
     ftp_remove_dir.cpp
     ftp_compare_files.cpp
     ftp_list_dir.cpp
+    intercept.cpp
     mavlink_direct.cpp
     mavlink_direct_forwarding.cpp
     system_tests_runner.cpp
