--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -35,6 +35,7 @@ add_subdirectory(logfile_download)
 add_subdirectory(log_streaming)
 add_subdirectory(mavlink_direct)
 add_subdirectory(mavlink_direct_sender)
+add_subdirectory(mavlink_direct_sender_custom)
 add_subdirectory(mavshell)
 add_subdirectory(multiple_drones)
 add_subdirectory(offboard)
