Add system wrapper

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,39 @@
 cmake_minimum_required(VERSION 3.22.1)
-project(cmavsdk)
+project(cmavsdk
+    VERSION 3.10.2
+    DESCRIPTION "C API wrapper for MAVSDK"
+    LANGUAGES C CXX
+)
 
 # Set C++ standard
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
 # Set C standard
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED ON)
+set(CMAKE_C_EXTENSIONS OFF)
 
 find_package(MAVSDK REQUIRED)
+
+set(C_API_SOURCES
+    mavsdk.cpp
+    system.cpp
+)
+
+set(C_API_HEADERS
+    mavsdk.h
+    system.h
+    mavsdk_export.h
+)
 
 add_library(cmavsdk)
 
 target_sources(cmavsdk
     PRIVATE
-    mavsdk.cpp
+        ${C_API_SOURCES}
+        ${C_API_HEADERS}
 )
 
 target_include_directories(cmavsdk
@@ -25,23 +43,31 @@ target_include_directories(cmavsdk
 )
 
 target_link_libraries(cmavsdk
-    MAVSDK::mavsdk
+    PRIVATE
+        MAVSDK::mavsdk
 )
 
 target_compile_definitions(cmavsdk
     PRIVATE
-    CMAVSDK_BUILD
+        CMAVSDK_BUILD
 )
 
 target_compile_options(cmavsdk
     PRIVATE
-    -Wall
-    -Wextra
-    #-Werror
-    -fvisibility=hidden
+        -Wall
+        -Wextra
+        #-Werror
+        -fvisibility=hidden
+)
+
+set_target_properties(cmavsdk PROPERTIES
+    VERSION ${PROJECT_VERSION}
+    SOVERSION 3
+    EXPORT_NAME CMAVSDK
 )
 
 install(TARGETS cmavsdk
+    EXPORT cmavsdkTargets
     RUNTIME DESTINATION bin
     LIBRARY DESTINATION lib
     ARCHIVE DESTINATION lib
@@ -49,13 +75,13 @@ install(TARGETS cmavsdk
 
 install(
     FILES
-    mavsdk.h
-    mavsdk_export.h
+        ${C_API_HEADERS}
     DESTINATION include/cmavsdk
 )
 
-set_target_properties(cmavsdk PROPERTIES
-    VERSION 3.10.2
-    SOVERSION 3
+install(EXPORT cmavsdkTargets
+    FILE cmavsdkConfig.cmake
+    NAMESPACE CMAVSDK::
+    DESTINATION lib/cmake/cmavsdk
 )
 
