Add hardcoded telemetry wrapper

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,19 +1,23 @@
 find_package(MAVSDK REQUIRED)
 
 set(C_API_SOURCES
+    action/action.cpp
     log.cpp
     mavsdk.cpp
     system.cpp
+    telemetry/telemetry.cpp
 )
 
 set(C_API_HEADERS
     autopilot.h
+    action/action.h
     component_type.h
     connection_result.h
     log.h
     mavsdk.h
     mavsdk_export.h
     system.h
+    telemetry/telemetry.h
     vehicle.h
 )
 
