Add calibration example

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,11 +1,23 @@
-add_executable(example)
+add_executable(takeoff-and-land)
 
-target_sources(example
+target_sources(takeoff-and-land
     PRIVATE
-        main.cpp
+        takeoff-and-land.cpp
 )
 
-target_link_libraries(example
+target_link_libraries(takeoff-and-land
+    PRIVATE
+        cmavsdk
+)
+
+add_executable(calibrate)
+
+target_sources(calibrate
+    PRIVATE
+        calibrate.cpp
+)
+
+target_link_libraries(calibrate
     PRIVATE
         cmavsdk
 )
