core: add raw connection
This adds a "raw connection" which accepts and delivers raw bytes. This
can be handy when a custom transport other than the included
UDP/TCP/serial needs to be used.

--- a/src/mavsdk/core/CMakeLists.txt
+++ b/src/mavsdk/core/CMakeLists.txt
@@ -81,6 +81,7 @@ target_sources(mavsdk
     param_value.cpp
     ping.cpp
     plugin_impl_base.cpp
+    raw_connection.cpp
     serial_connection.cpp
     server_component.cpp
     server_component_impl.cpp
