system_tests: add re-connection tests
This adds tests for reconnection of:
- TCP server
- TCP client
- UDP server
- UDP client

--- a/src/system_tests/CMakeLists.txt
+++ b/src/system_tests/CMakeLists.txt
@@ -28,6 +28,7 @@ add_executable(system_tests_runner
     intercept.cpp
     mavlink_direct.cpp
     mavlink_direct_forwarding.cpp
+    connections.cpp
     system_tests_runner.cpp
 )
 
