--- a/docker/Dockerfile-ubuntu-24.04
+++ b/docker/Dockerfile-ubuntu-24.04
@@ -28,6 +28,7 @@ RUN apt-get update \
         clang-19 \
         clang-format-19 \
         libclang-rt-19-dev \
+        llvm-19 \
         cmake \
         python3 \
         python3-pip \
