--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -2,7 +2,7 @@ add_executable(takeoff-and-land)
 
 target_sources(takeoff-and-land
     PRIVATE
-        takeoff-and-land.cpp
+        takeoff-and-land.c
 )
 
 target_link_libraries(takeoff-and-land
@@ -14,10 +14,35 @@ add_executable(calibrate)
 
 target_sources(calibrate
     PRIVATE
-        calibrate.cpp
+        calibrate.c
 )
 
 target_link_libraries(calibrate
     PRIVATE
         cmavsdk
 )
+
+add_executable(camera-client)
+
+target_sources(camera-client
+    PRIVATE
+        camera-client.c
+)
+
+target_link_libraries(camera-client
+    PRIVATE
+        cmavsdk
+)
+
+add_executable(camera-server)
+
+target_sources(camera-server
+    PRIVATE
+        camera-server.c
+)
+
+target_link_libraries(camera-server
+    PRIVATE
+        cmavsdk
+)
+
