core: add callback tracker to debug user callbacks
This adds a class to debug user callbacks taking too long.

The class is only instantiated and used when the env variable
MAVSDK_CALLBACK_DEBUGGING=1
is set.

--- a/src/mavsdk/core/CMakeLists.txt
+++ b/src/mavsdk/core/CMakeLists.txt
@@ -45,6 +45,7 @@ target_sources(mavsdk
     autopilot.cpp
     base64.cpp
     call_every_handler.cpp
+    callback_tracker.cpp
     connection.cpp
     connection_result.cpp
     crc32.cpp
