tools: convert fix_style.sh to fix_style.py
With a Python script we can speed this up in the future.

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -449,7 +449,7 @@ jobs:
       - name: generate code from protos
         run: PATH="$PATH:$HOME/.local/bin" tools/generate_from_protos.sh
       - name: fix style
-        run: tools/fix_style.sh . || true
+        run: tools/fix_style.py . || true
       - name: check for diff
         run: git diff --exit-code
 
