--- a/docker/Dockerfile-ubuntu-24.04
+++ b/docker/Dockerfile-ubuntu-24.04
@@ -33,6 +33,7 @@ RUN apt-get update \
         python3 \
         python3-pip \
         python3-future \
+        python3-tqdm \
         ruby-dev \
         doxygen \
         colordiff \
