--- a/src/mavsdk/core/CMakeLists.txt
+++ b/src/mavsdk/core/CMakeLists.txt
@@ -130,10 +130,19 @@ else()
     )
 endif()
 
+if(IS_ABSOLUTE "${CMAKE_INSTALL_LIBDIR}")
+    set(MAVSDK_INSTALL_RPATH "${CMAKE_INSTALL_LIBDIR}")
+else()
+    set(MAVSDK_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}")
+endif()
+
 set_target_properties(mavsdk PROPERTIES
     VERSION ${MAVSDK_VERSION_STRING}
     SOVERSION ${MAVSDK_SOVERSION_STRING}
+    INSTALL_RPATH "${MAVSDK_INSTALL_RPATH}"
+    INSTALL_RPATH_USE_LINK_PATH TRUE
 )
+
 if (MSVC)
     set_target_properties(mavsdk PROPERTIES
         DEBUG_POSTFIX "d"
