docker: get latest rubygems

--- a/docker/Dockerfile.dockcross-linux-arm64-custom
+++ b/docker/Dockerfile.dockcross-linux-arm64-custom
@@ -2,5 +2,5 @@ FROM dockcross/linux-arm64:20250109-7bf589c
 
 ENV DEFAULT_DOCKCROSS_IMAGE=mavsdk/mavsdk-dockcross-linux-arm64-custom
 
-RUN apt install rubygems -y
+RUN apt update && apt install rubygems -y
 RUN gem install fpm
