--- a/docker/Dockerfile.dockcross-linux-arm64-lts-custom
+++ b/docker/Dockerfile.dockcross-linux-arm64-lts-custom
@@ -2,5 +2,5 @@ FROM dockcross/linux-arm64-lts:20250311-4bd0eec
 
 ENV DEFAULT_DOCKCROSS_IMAGE=mavsdk/mavsdk-dockcross-linux-arm64-lts-custom
 
-RUN apt install rubygems -y
+RUN apt update && apt install rubygems -y
 RUN gem install fpm
