--- a/docker/Dockerfile.dockcross-linux-armv6-custom
+++ b/docker/Dockerfile.dockcross-linux-armv6-custom
@@ -2,5 +2,5 @@ FROM dockcross/linux-armv6:20250311-4bd0eec
 
 ENV DEFAULT_DOCKCROSS_IMAGE=mavsdk/mavsdk-dockcross-linux-armv6-custom
 
-RUN apt install rubygems -y
+RUN apt update && apt install rubygems -y
 RUN gem install fpm
