--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -751,6 +751,9 @@ jobs:
         with:
           submodules: recursive
           fetch-depth: 0
+      - name: Free Disk Space
+        uses: jlumbroso/free-disk-space@v1.3.1
+        continue-on-error: true
       - name: setup dockcross
         run: docker run --rm dockcross/${{ matrix.name }}:20250818-0a27819 > ./dockcross-${{ matrix.name }}; chmod +x ./dockcross-${{ matrix.name }}
       - uses: actions/cache@v4
